Refactor Form Basics

--- a/week-03/day-01/FormBasics/LoginForm/index.html
+++ b/week-03/day-01/FormBasics/LoginForm/index.html
@@ -4,100 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Login Form</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      font-weight: normal;
-      text-decoration: none;
-      color: #000;
-    }
-    body {
-      margin: 0;
-      padding: 0;
-      background: #ebebeb;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .card {
-      border-radius: 5px;
-      margin-top: 63px;
-      padding: 48px 85px;
-      width: 562px;
-      height: 521px;
-      background-color: #fff;
-      box-shadow: 0 1px 3px 0 rgba(0,0,0,.2);
-    }
-    button,
-    .hint,
-    .card h1{
-      font-family: 'Century Gothic Negreta';
-    }
-    .card h1 {
-      color: #3b3c38;
-      font-size: 32px;
-    }
-    form label {
-      display: block;
-      font-size: 12px;
-      margin-bottom: 12px;
-    }
-    input[type="text"],
-    input[type="password"] {
-      outline: none;
-      border-radius: 5px;
-      border: 1px solid rgba(0,0,0,.2);
-      width: 100%;
-      padding-left: 12px;
-      font-size: 24px;
-      height: 50px;
-    }
-    input[type="text"]:focus,
-    input[type="password"]:focus {
-      border: 1px solid green;
-    }
-    .field {
-      margin-bottom: 24px;
-    }
-    .hint {
-      color: gray;
-      font-size: 12px;
-      margin-top: 12px;
-    }
-    button {
-      cursor: pointer;
-      padding: 0 48px;
-      border: 0;
-      outline: none;
-      color: #fff;
-      font-size: 18px;
-      height: 52px;
-      background-color: #3b3c38;
-      border-radius: 26px;
-    }
-    button.submit {
-      margin-top: 64px;
-      border: 2px solid transparent;
-    }
-    button.submit:hover {
-      color: #3b3c38;
-      border: 2px solid #3b3c38;
-      background-color: #fff;
-    }
-    .password {
-      position: relative;
-    }
-    .password .eye {
-      cursor: pointer;
-      fill: gray;
-      display: block;
-      width: 16px;
-      height: 16px;
-      position: absolute;
-      top: 20px;
-      right: 16px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="card">
