feat(project/client): finish basic components

--- a/week-07/project/client/public/index.html
+++ b/week-07/project/client/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React Reddit</title>
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <title>Redddit</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
